# learn-django-01

./: .gitignore  pyproject.toml  readme.adoc
app/: db.sqlite3
app/core/: settings.py  urls.py
app/product/: enums.py  managers.py  models.py  serializers.py  urls.py  views.py
app/product/migrations/: 0001_initial.py  0002_category_is_available_category_status.py
app/product/urls/: category.py  product.py
app/user/: models.py
app/user/migrations/: 0001_initial.py  0002_user_is_deleted.py
